Fix #2345 "FB: Section Help dialog is too narrow"
- also remove unneeded rule for removed Section Details dialog

--- a/src/resources/forms/orbeon/builder/resources/form-builder.less
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.less
@@ -346,7 +346,7 @@ body {
 
 
     // Help dialog
-    #fb-edit-help-dialog {
+    .fb-section-help-dialog {
         width: 400px;
         textarea {
             width: 98%;
@@ -355,7 +355,7 @@ body {
     }
 
     // Other dialogs
-    #fb-section-details-dialog, #fb-add-language-dialog {
+    #fb-add-language-dialog {
         width: 400px;
     }
 
